# family-shopping-cart

./: .env.example  LICENSE  README.md  docker-compose.yaml  start.bat
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/crud/: __init__.py  category.py  coupon.py  family.py  price.py  product.py  shopping_list.py  system.py  user.py
backend/app/models/: __init__.py  category.py  coupon.py  family.py  ocr_log.py  price.py  product.py  shopping_list.py  system_settings.py  user.py
backend/app/routers/: __init__.py  auth.py  categories.py  coupons.py  export.py  families.py  ocr.py  prices.py  products.py  search.py  shopping_list.py  statistics.py  system.py  users.py
backend/app/schemas/: __init__.py  category.py  coupon.py  family.py  price.py  product.py  shopping_list.py  system.py  user.py
backend/app/services/: __init__.py  export.py  meilisearch.py  ocr.py  oss.py  scraper.py  scraper_example.py  statistics.py
backend/app/tasks/: __init__.py  celery_app.py  ocr_tasks.py  price_scraper.py  scheduled.py
backend/app/utils/: __init__.py  logging_config.py  pagination.py  security.py
db/: init.sql
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/nginx/: default.conf
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  request.js
frontend/src/components/: Layout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  shopping.js
playwright-service/: Dockerfile  pyproject.toml
(+12 files in other folders)
