 [project]
 name = "hpms-backend"
 version = "1.0.0"
 description = "HPMS - Family Shopping Decision System Backend"
 requires-python = ">=3.11"
 
 dependencies = [
     "fastapi>=0.110.0",
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "sqlalchemy[asyncio]>=2.0.25",
     "aiomysql>=0.2.0",
     "asyncmy>=0.2.9",
     "cryptography>=41.0.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "bcrypt>=4.1.0",
     "celery>=5.3.6",
     "redis>=5.0.0",
     "meilisearch>=0.34.0",
     "openpyxl>=3.1.2",
     "reportlab>=4.0.8",
     "httpx>=0.27.0",
     "loguru>=0.7.2",
 ]
 
 [project.optional-dependencies]
 aliyun = [
     "oss2>=2.18.1",
     "aliyun-python-sdk-core>=2.13.36",
     "aliyun-python-sdk-ocr>=1.0.4",
 ]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
 ]
 
 [build-system]
 requires = ["setuptools>=68.0"]
 build-backend = "setuptools.backends._legacy:_Backend"
 
 [tool.uv]
 dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
